--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 @media screen  and (max-width:800px){
     #icon-nav{opacity:1;}
     #icon-nav>img{  width:100%;height: 100%;opacity:1;}
-    #nav{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;position:relative;left:-120%;background-color: lightblue;height:90vh;}
+    #nav{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;position:relative;left:-120%;background-color: lightblue;height:500px;}
     .md{position: relative;left:-1500%;}
     #nav>section:nth-child(1){-webkit-box-ordinal-group:3;-ms-flex-order:2;order:2;width: 100%;margin-top:1.5rem ;}
     #nav>section:nth-child(1)>div{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
