--- a/css/style2.css
+++ b/css/style2.css
@@ -259,7 +259,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 @media screen  and (max-width:800px){
     #icon-nav{opacity:1;}
     #icon-nav>img{  width:100%;height: 100%;opacity:1;}
-    #nav{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;position:relative;left:-120%;background-color: lightblue;height:50vh;}
+    #nav{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;position:relative;left:-120%;background-color: lightblue;height:50px;}
     .md{position: relative;left:-1500%;}
     #nav>section:nth-child(1){-webkit-box-ordinal-group:3;-ms-flex-order:2;order:2;width: 100%;margin-top:1.5rem ;}
     #nav>section:nth-child(1)>div{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
@@ -298,7 +298,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
  #nav-part1>div>section:hover  .title1>span{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);color: rgb(10, 10, 10);}
 
  .v-icon{position: absolute;right:2rem;}
- #animation{top:-25rem;position: relative;}
+ #animation{top:-22.5rem;position: relative;}
  #points{opacity: 1;}
 
  
