--- a/css/page3.css
+++ b/css/page3.css
@@ -38,6 +38,7 @@ body>div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: 
     #arrows button:nth-child(1){position: absolute;top:180px;left:0;font-size: 2.5rem;}
     #arrows button:nth-child(2){position: absolute;top:180px;right:0;font-size: 2.5rem;}
     #arrows button:nth-child(3){position: absolute;top:-3.25rem;right:0;font-size: 2.5rem;}
+    #copy2020{position: relative;top:50%;width: 100%;left: 80%;}
 }
 
 
