--- a/css/page3.css
+++ b/css/page3.css
@@ -7,7 +7,7 @@
 
 @charset "UTF-8";
 body>div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;margin-top: 3rem;}
-#part1{width: 45%;background-color: aqua;}
+#part1{width: 45%;background-color: aqua;position: relative;}
 #part1>div:nth-child(1) img{width: 100%;height: 100%;}
 #part1>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;margin-top: 0.5rem;}
 #part1>div:nth-child(2) a{display: inline-block;width:20%;height:20%;}
@@ -29,7 +29,7 @@ body>div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: 
 #arrows button:nth-child(3){position: absolute;top:-3.25rem;right:0;font-size: 2.5rem;}
 #lightbox{display: none;}
 
-#copy2020{position: relative;top:20%;width: 100%;left: 80%;}
+#copy2020{position: absolute;top:100%;width: 100%;left: 80%;}
 @media screen and (max-width:800px){
     #part2>p{font-size:1.5rem;line-height:1.75rem;color: lightyellow;}
     #part2>h2+p+div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack:distribute;justify-content:space-around;margin-top:15%;}
@@ -38,7 +38,7 @@ body>div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: 
     #arrows button:nth-child(1){position: absolute;top:180px;left:0;font-size: 2.5rem;}
     #arrows button:nth-child(2){position: absolute;top:180px;right:0;font-size: 2.5rem;}
     #arrows button:nth-child(3){position: absolute;top:-3.25rem;right:0;font-size: 2.5rem;}
-    #copy2020{position: relative;top:50%;width: 100%;left: 80%;}
+    
 }
 
 
