--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
   
     #nav>section:nth-child(2)>div{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;}
     
-    input[id=btn-nav]:checked+nav{-webkit-animation:nav 1s forwards ;animation:nav 1s forwards ;}
+    input[id=btn-nav]:checked+nav{-webkit-animation:nav 0.5 forwards ;animation:nav 0.5s forwards ;}
     @-webkit-keyframes nav{ 
                0%{left:-120%; }
                100%{left:0%;}
