--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #grid>div{overflow: hidden;}
 
 
-#flex3{width:95vw ;        height:450px;padding: 2rem;background-color: rosybrown;position: relative;top:25rem;left: -5%;}
+#flex3{width:100% ;        height:450px;padding: 2rem;background-color: rosybrown;position: relative;top:25rem;left:-2.5%;}
 #flex3>h1{font-size: 3rem;font-weight: bolder;text-align: center;padding: 0.5rem;}
 #flex3>div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;}
 #flex3>h1+div>div{width:15%;background-color:rgb(240, 240, 240);height: 300px;padding:2rem;-webkit-transition: 0.5s;-o-transition: 0.5s;transition: 0.5s;position: relative;-webkit-box-shadow: 0 0 10px skyblue;box-shadow: 0 0 10px skyblue;}
@@ -310,7 +310,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #flex4>div:nth-child(2)>p{line-height:2rem;font-size: 1.5rem;margin-top:3.5rem 0;}
 
 
-#footer{position: relative;top:35rem;width: 100%;left:5%;background-color: rgb(220, 220, 220);z-index: -10;}
+#footer{position: relative;top:35rem;width: 100%;left:0%;background-color: rgb(220, 220, 220);z-index: -10;}
 #footer>div:nth-child(1){height: 450px;}
 #footer>div:nth-child(1)>h3{text-align: center;font-weight: bold;font-size: 2rem;position: relative;top:100px;}
 #footer>div:nth-child(1)>h3>span{font-size: 1rem;}
@@ -406,7 +406,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 
 
-#flex3{width:100%;height:1200px;padding: 2rem;background-color: rosybrown;position: relative;top:2.5rem;left:0%;}
+#flex3{width:90%;height:1200px;padding: 2rem;background-color: rosybrown;position: relative;top:2.5rem;margin: 0 auto;left:0%;}
 #flex3>h1{font-size: 3rem;font-weight: bolder;text-align: center;padding: 0.5rem;}
 #flex3>div{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;height: 1100px;}
 #flex3>h1+div>div{width:80%;background-color:rgb(240, 240, 240);height: 250px;padding:2rem;-webkit-transition: 0.5s;-o-transition: 0.5s;transition: 0.5s;position: relative;-webkit-box-shadow: 0 0 10px skyblue;box-shadow: 0 0 10px skyblue;margin: 0 auto;}
@@ -414,13 +414,13 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 
 
-#flex4{position: relative;top:7.5rem;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;height:850px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
+#flex4{position: relative;top:7.5rem;left:0.5%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;height:850px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
 #flex4>div{width:90%;height:42.5%;   padding: 1.5rem;}
 
 
 
 
-#footer{position: relative;top:12.5rem;width: 100%;left:5%;background-color: rgb(220, 220, 220);z-index:10;}
+#footer{position: relative;top:12.5rem;width: 100%;left:0%;margin:0 auto;background-color: rgb(220, 220, 220);z-index:10;}
 #footer>div:nth-child(1)>h3+div+div{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: center;-ms-flex-pack: center;justify-content: center;width:100%;position: relative;top:180px;text-align: center;margin: 0 auto;}
 #footer>div:nth-child(1)>div label{display: block;width: 80%;margin: 0 auto;}
 #footer>div:nth-child(1)>div input{display:block;width: 80%;margin: 0 auto;padding: 1rem 0;border: none;outline:none;background-color: unset;}
@@ -455,7 +455,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
                 #grid>div:nth-child(6){-ms-grid-row:2;-ms-grid-row-span:1;-ms-grid-column:3;-ms-grid-column-span:1;grid-area:2/3/span 1/span 1 ;}
 
 
-                #flex3{width:90vw ;        height:900px;padding: 2rem;background-color: rosybrown;position: relative;top:25rem;left: -5%;}
+  #flex3{width:100% ; height:900px;padding: 2rem;background-color: rosybrown;position: relative;top:25rem;left:-2.5%;margin: 0 auto;}
 #flex3>h1{font-size: 3rem;font-weight: bolder;text-align: center;padding: 0.5rem;}
 #flex3>div{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-wrap:wrap;flex-wrap:wrap;}
 #flex3>h1+div>div{width:35%;background-color:rgb(240, 240, 240);height: 300px;padding:2rem;-webkit-transition: 0.5s;-o-transition: 0.5s;transition: 0.5s;position: relative;-webkit-box-shadow: 0 0 10px skyblue;box-shadow: 0 0 10px skyblue;}
