--- a/css/style2.css
+++ b/css/style2.css
@@ -93,7 +93,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #nav-part1>div>section:nth-child(3) .md a{display: block;}
 #nav-part1>div>section:nth-child(4) .md{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
 #nav-part1>div>section:nth-child(4) .md a{display: block;padding: 0.5rem  0;}
-#animation{position: relative;top:10rem;width:99vw;height:600px;overflow: hidden;left: -5.7%;}
+#animation{position: relative;top:10rem;width:100%;height:600px;overflow: hidden;left: 0%;}
 #animation>section{display: -webkit-box;display: -ms-flexbox;display: flex;height: 550px;}
 #animation>section>figure img{width: 100%;height: 100%;}
 #animation>section>figure{position: relative;}
@@ -231,7 +231,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 
 
-#footer{position: relative;top:5rem;width: 98.5vw;left:-5%;background-color: rgb(220, 220, 220);z-index: 10;}
+#footer{position: relative;top:5rem;width: 100%;left:0%;background-color: rgb(220, 220, 220);z-index: 10;}
 #footer>div:nth-child(1){height: 450px;}
 #footer>div:nth-child(1)>h3{text-align: center;font-weight: bold;font-size: 2rem;position: relative;top:100px;}
 #footer>div:nth-child(1)>h3>span{font-size: 1rem;}
@@ -312,7 +312,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 
 
-#footer{position: relative;top:-35rem;width: 100vw;left:-5%;background-color: rgb(220, 220, 220);z-index:10;}
+#footer{position: relative;top:-35rem;width: 100%;left:0%;background-color: rgb(220, 220, 220);z-index:10;}
 #footer>div:nth-child(1)>h3+div+div{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: center;-ms-flex-pack: center;justify-content: center;width:100%;position: relative;top:180px;text-align: center;margin: 0 auto;}
 #footer>div:nth-child(1)>div label{display: block;width: 80%;margin: 0 auto;}
 #footer>div:nth-child(1)>div input{display:block;width: 80%;margin: 0 auto;padding: 1rem 0;border: none;outline:none;background-color: unset;}
@@ -328,7 +328,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #animation>section>figure>img+div>figcaption+p{font-weight: bold;margin-top: 5rem;font-size: 1.5rem;}
 
 
-#footer{position: relative;top:-35rem;width: 100vw;left:-5%;background-color: rgb(220, 220, 220);z-index:10;}
+#footer{position: relative;top:-35rem;width: 100%;left:0%;background-color: rgb(220, 220, 220);z-index:10;}
 }
 
 @media screen  and (min-width:601px)
@@ -344,7 +344,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 @media screen  and (min-width:801px)
                and (max-width:1280px){
-                #footer{position: relative;top:-5rem;width: 100vw;left:-5%;background-color: rgb(220, 220, 220);z-index:10;}
+                #footer{position: relative;top:-5rem;width: 100%;left:0%;background-color: rgb(220, 220, 220);z-index:10;}
                 #footer>div:nth-child(1)>div label{display: block;width: 50%;margin: 0 auto;}
                 #footer>div:nth-child(1)>div input{display:block;width: 50%;margin: 0 auto;padding: 0.5rem 0;border: none;outline:none;background-color: unset;}
                 #footer>div:nth-child(1)>div input{border-bottom:2px solid rgb(240, 240, 240);}
