--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,9 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #footer>div:nth-child(1)>h3+div+div>div:hover>a+div+div+div+div{width:92.5%;height:92.5%;}
 
 @media screen  and (max-width:800px){
+
+   body>div{width: 100%;}
+
     #icon-nav{opacity:1;}
     #icon-nav>img{  width:100%;height: 100%;opacity:1;}
     #nav{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;position:relative;left:-120%;background-color: lightblue;height:500px;}
@@ -362,6 +365,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 .title2>span{position: absolute;left:30%;}
 
 .md{display:none;}
+
 #nav-part1>div>section{width:100%;}
 #nav-part1>div>section:hover .md{display:none;}
 #nav-part1>div>section:nth-child(3):hover .md{display:none;}
@@ -385,16 +389,16 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #arrows>button:nth-child(2){display: none;}
 
 
-#flex{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;top:-17.5rem;height:850px ;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;}
+#flex{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;left:0;top:-22.5rem;height:850px ;width:100%;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;}
 #flex>div:nth-child(1){width: 100%;padding: 0;}
 #flex>div:nth-child(2){width: 100%;padding: 0;}
 #flex>div:nth-child(2) img{-webkit-transform: scale(0.95);-ms-transform: scale(0.95);transform: scale(0.95);}
-#flex2{top:-17.5rem;height:800px ;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;background-repeat: repeat;-ms-flex-wrap: wrap;flex-wrap: wrap;}
+#flex2{top:-17.5rem;height:800px ;width: 100%;      -webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;background-repeat: repeat;-ms-flex-wrap: wrap;flex-wrap: wrap;}
 #flex2>div{width: 48%;}
 #flex2>div hr{width: 60%;}
 
 
-#grid{display:-ms-grid;display:grid;-ms-grid-columns:auto 0.1rem auto;grid-template-columns:auto auto;position: relative;top:-7.5rem;grid-gap:0.1rem ;height: 1000px;}
+#grid{display:-ms-grid;display:grid;-ms-grid-columns:auto 0.1rem auto;grid-template-columns:auto auto;position: relative;top:-7.5rem;grid-gap:0.1rem ;height: 1000px;width: 100%;left:0;}
 #grid>div img{width: 100%;height: 100%;}
 #grid>div:nth-child(1){-ms-grid-row:1;-ms-grid-row-span:1;-ms-grid-column:1;-ms-grid-column-span:1;grid-area:1/1/span 1/span 1 ;}
 #grid>div:nth-child(2){-ms-grid-row:2;-ms-grid-row-span:1;-ms-grid-column:1;-ms-grid-column-span:1;grid-area:2/1/span 1/span 1 ;}
@@ -406,15 +410,22 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 
 
-#flex3{width:90%;height:1200px;padding: 2rem;background-color: rosybrown;position: relative;top:2.5rem;margin: 0 auto;left:0%;}
+#flex3{width:87.5%;height:1200px;background-color: rosybrown;position: relative;top:2.5rem;margin: 0 auto;left:0%;}
 #flex3>h1{font-size: 3rem;font-weight: bolder;text-align: center;padding: 0.5rem;}
 #flex3>div{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;height: 1100px;}
-#flex3>h1+div>div{width:80%;background-color:rgb(240, 240, 240);height: 250px;padding:2rem;-webkit-transition: 0.5s;-o-transition: 0.5s;transition: 0.5s;position: relative;-webkit-box-shadow: 0 0 10px skyblue;box-shadow: 0 0 10px skyblue;margin: 0 auto;}
+#flex3>h1+div>div{ width:60%;background-color:rgb(240, 240, 240);height: 250px;padding:2rem;-webkit-transition: 0.5s;-o-transition: 0.5s;transition: 0.5s;position: relative;-webkit-box-shadow: 0 0 10px skyblue;box-shadow: 0 0 10px skyblue;margin: 0 auto;}
+#flex3>h1+div>div>div{padding:1rem 0 ;}
+#flex3>h1+div>div>div+h3{position: absolute;top: 30% ;font-size: 1.5rem;font-weight: bold;}
+#flex3>h1+div>div>div+h3+p{position: absolute;top: 45% ;line-height: 1.5rem;}
+#flex3>h1+div>div>div+h3+p+span{position: absolute;top:70%;}
+#flex3>h1+div>div>div+h3+p+span>div:nth-child(1){width: 3rem;height: 3rem;border-radius: 3rem;border:2px solid rgb(240, 240, 240) ;overflow: hidden;display: inline-block;vertical-align:middle;}
+#flex3>h1+div>div>div+h3+p+span>div:nth-child(1) img{width:100%;height:100%;}
+#flex3>h1+div>div>div+h3+p+span>div:nth-child(2){display: inline-block;margin-left: 0.5rem;font-weight: bold;}
+#flex3>h1+div>div:hover{-webkit-transform: scale(1.2);-ms-transform: scale(1.2);transform: scale(1.2);}
 
 
 
-
-#flex4{position: relative;top:7.5rem;left:0.5%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;height:850px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
+#flex4{position: relative;top:7.5rem;left:0%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;height:850px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
 #flex4>div{width:90%;height:42.5%;   padding: 1.5rem;}
 
 
