--- a/css/style2.css
+++ b/css/style2.css
@@ -257,6 +257,7 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 #footer>div:nth-child(1)>h3+div+div>div:hover>a+div+div+div+div{width:92.5%;height:92.5%;}
 
 @media screen  and (max-width:800px){
+    body>div{width: 100%;}
     #icon-nav{opacity:1;}
     #icon-nav>img{  width:100%;height: 100%;opacity:1;}
     #nav{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;position:relative;left:-120%;background-color: lightblue;height:500px;}
