--- a/css/style.css
+++ b/css/style.css
@@ -425,8 +425,8 @@ body>div{width:90%;margin: 0 auto;position: relative;}
 
 
 
-#flex4{position: relative;top:7.5rem;left:0%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;height:850px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
-#flex4>div{width:90%;height:42.5%;   padding: 1.5rem;}
+#flex4{position: relative;top:7.5rem;left:0%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;height:900px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
+#flex4>div{width:100%;height:375px;   padding: 1.5rem;}
 
 
 
