--- a/css/product.css
+++ b/css/product.css
@@ -1,51 +1,33 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 @charset"UTF-8";
 #btn{opacity: 0;}
 #btn2{position: relative;left:80%;display:none;width: 35px;}
-#nav{display: -webkit-box;display: -ms-flexbox;display: flex;background-color: brown;}
+#nav{display: flex;background-color: brown;}
 #nav>div:nth-child(1){width:25%;position: relative;top:20px;}
-#nav>div:nth-child(2){width:75%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;}
+#nav>div:nth-child(2){width:75%;display: flex;justify-content: space-around;}
 
 
+#pic>div:nth-child(1){width: 80%;height:427px;margin: 0 auto;}
+#pic>div:nth-child(1) img{width: 100%;height: 100%;}
+#pic>div:nth-child(2){display:flex;position: relative;left:10%;top:25px;}
+#pic>div:nth-child(2)>a{display: block;width: 15vw;height: 15vw;}
+#pic>div:nth-child(2)>a img{width: 100%;height: 100%;}
 
-#modal>div{width:90vw;height:400px;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start;margin:0 auto;position: relative;top:5rem;}
-#modal>div>div{width:43%;height:100%;border:2px solid rgb(150,150,150);margin: 0 auto;}
-#modal>div>div:nth-child(1)>div:nth-child(1) {width:100%;height:100%;  }
-#modal>div>div:nth-child(1)>div:nth-child(1) img{width:100%;height:100%;  }
-#modal>div>div:nth-child(1)>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start;position:absolute;top:105%;width:38.5vw;}
-#modal>div>div:nth-child(1)>div:nth-child(2) a{display:inline-block;width:7vw;height:5rem;border:2px solid rgb(150,150,150);  }
-#modal>div>div:nth-child(1)>div:nth-child(2) img{width:100%;height:100%;  }
-
-
-#coffee{position: relative;top:200px;}
+#coffee{position: relative;top:0px;}
 #coffee a{display: block;width: 100%;text-decoration: none;color: black;text-align: center;background-color: brown;padding: 5px;}
 
 footer{text-align: center;position: relative;top:200px;}
 @media screen and (max-width:800px){
-    #modal>div{width:90vw;height:400px;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start;margin:0 auto;position: relative;top:5rem;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
-    #modal>div>div{width:100%;height:400px;border:2px solid rgb(150,150,150);background-color:lightblue;}
-    #modal>div>div:nth-child(1)>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: start;-ms-flex-pack: start;justify-content: flex-start;position:absolute;top:420px;width:100%;}
-    #modal>div>div:nth-child(1)>div:nth-child(2) a{display:inline-block;width:20%;height:5rem;border:2px solid rgb(150,150,150);background-color:lightblue;  }
-    #modal>div>div:nth-child(1)>div:nth-child(2) img{width:100%;height:100%;  }
+ 
     
 }
 
 @media screen and (max-width:600px){
     #btn2{position: relative;left:90%;display: block;}
-    #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
+    #nav{flex-direction: column;}
     #nav>div:nth-child(1){margin:0 auto;}
-    #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
-    input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
+    #nav>div:nth-child(2){display: flex;flex-direction: column;width: 100%;}
+    input[id=btn]:checked+nav{animation:nav 0.3s forwards;}
     #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
-    @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
-                     100%{left:0%;position: absolute;}
-                                    }
     @keyframes nav {0%{left:-100%;position: absolute;}
                      100%{left:0%;position: absolute;}
                                     }
@@ -55,14 +37,11 @@ footer{text-align: center;position: relative;top:200px;}
 @media screen and (min-width:601px)
               and (max-width:800px){
                 #btn2{position: relative;left:90%;display: block;}
-                #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
+                #nav{flex-direction: column;}
                 #nav>div:nth-child(1){margin:0 auto;}
-                #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
-                input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
+                #nav>div:nth-child(2){display: flex;flex-direction: column;width: 100%;}
+                input[id=btn]:checked+nav{animation:nav 0.3s forwards;}
                 #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
-                @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
-                                 100%{left:0%;position: absolute;}
-                                                }
                 @keyframes nav {0%{left:-100%;position: absolute;}
                                  100%{left:0%;position: absolute;}
                                                 }
@@ -72,8 +51,11 @@ footer{text-align: center;position: relative;top:200px;}
 }
 
 @media screen and (min-width:801px){
-    #coffee{position: relative;top:200px;}
+    #coffee{position: relative;top:0px;}
     footer{text-align: center;position: relative;top:200px;}
+
+    #pic>div:nth-child(1){width: 60%;height:427px;margin: 0 auto;}
+    #pic>div:nth-child(2){display:flex;position: relative;left:20%;}
 }
 
 
