--- a/css/product.css
+++ b/css/product.css
@@ -1,21 +1,33 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @charset"UTF-8";
 #btn{opacity: 0;}
 #btn2{position: relative;left:80%;display:none;width: 35px;}
-#nav{display: flex;background-color: brown;}
+#nav{display: -webkit-box;display: -ms-flexbox;display: flex;background-color: brown;}
 #nav>div:nth-child(1){width:25%;position: relative;top:20px;}
-#nav>div:nth-child(2){width:75%;display: flex;justify-content: space-around;}
+#nav>div:nth-child(2){width:75%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;}
 
-
-#pic>div:nth-child(1){width: 80%;height:427px;margin: 0 auto;}
+#pic>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;width: 100%;}
+#pic>div:nth-child(1){width: 100%;height:427px;}
 #pic>div:nth-child(1) img{width: 100%;height: 100%;}
-#pic>div:nth-child(2){display:flex;position: relative;left:10%;top:25px;}
+#pic>div:nth-child(2){display:-webkit-box;display:-ms-flexbox;display:flex;position: relative;left:0%;top:25px;}
 #pic>div:nth-child(2)>a{display: block;width: 15vw;height: 15vw;}
 #pic>div:nth-child(2)>a img{width: 100%;height: 100%;}
 
 #coffee{position: relative;top:0px;}
 #coffee a{display: block;width: 100%;text-decoration: none;color: black;text-align: center;background-color: brown;padding: 5px;}
 
-footer{text-align: center;position: relative;top:200px;}
+#other>h3{position: relative;top:50px;}
+#other>h3+div{display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;margin-top: 50px;}
+#other>h3+div a{display: block;width: 20%;height: auto;}
+#other>h3+div a img{width: 100%;height: 100%;}
+
+footer{text-align: center;position: relative;top:0px;}
 @media screen and (max-width:800px){
  
     
@@ -23,39 +35,62 @@ footer{text-align: center;position: relative;top:200px;}
 
 @media screen and (max-width:600px){
     #btn2{position: relative;left:90%;display: block;}
-    #nav{flex-direction: column;}
+    #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
     #nav>div:nth-child(1){margin:0 auto;}
-    #nav>div:nth-child(2){display: flex;flex-direction: column;width: 100%;}
-    input[id=btn]:checked+nav{animation:nav 0.3s forwards;}
+    #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
+    input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
     #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
+    @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
+                     100%{left:0%;position: absolute;}
+                                    }
     @keyframes nav {0%{left:-100%;position: absolute;}
                      100%{left:0%;position: absolute;}
                                     }
-    
+
+ #pic>div:nth-child(1){width: 100%;height:427px;margin: 0 auto;}                           
+ #coffee{position: relative;top:0px;}
+
+ #other{opacity: 0;}
 }
 
 @media screen and (min-width:601px)
               and (max-width:800px){
                 #btn2{position: relative;left:90%;display: block;}
-                #nav{flex-direction: column;}
+                #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
                 #nav>div:nth-child(1){margin:0 auto;}
-                #nav>div:nth-child(2){display: flex;flex-direction: column;width: 100%;}
-                input[id=btn]:checked+nav{animation:nav 0.3s forwards;}
+                #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
+                input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
                 #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
+                @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
+                                 100%{left:0%;position: absolute;}
+                                                }
                 @keyframes nav {0%{left:-100%;position: absolute;}
                                  100%{left:0%;position: absolute;}
                                                 }
-
-
- 
+                #coffee{position: relative;top:50px;width: 100%;}
+                #pic>div:nth-child(1){width: 100%;height:427px;}
+                #pic>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;width: 100%;}
+                #pic>div:nth-child(2){display:-webkit-box;display:-ms-flexbox;display:flex;position: relative;left:0%;top:25px;}
+                main{display:-webkit-box;display:-ms-flexbox;display:flex ;-ms-flex-pack: distribute;justify-content: space-around;}
+                main>div{width: 49%;}
+                #pic>div:nth-child(2)>a{display: block;width: 7.5vw;height: 7.5vw;}
+                #coffee{position: relative;top:50px;width: 50%;}
 }
 
 @media screen and (min-width:801px){
-    #coffee{position: relative;top:0px;}
-    footer{text-align: center;position: relative;top:200px;}
+    #coffee{position: relative;top:50px;width: 50%;}
+    footer{text-align: center;position: relative;top:0px;}
 
-    #pic>div:nth-child(1){width: 60%;height:427px;margin: 0 auto;}
-    #pic>div:nth-child(2){display:flex;position: relative;left:20%;}
+   
+
+    #pic>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;width: 100%;}
+    #pic>div:nth-child(1){width: 100%;height:427px;position: relative;left:0%;}
+    #pic>div:nth-child(1) img{width: 100%;height: 100%;}
+    #pic>div:nth-child(2){display:-webkit-box;display:-ms-flexbox;display:flex;position: relative;left:0%;top:25px;}
+    #pic>div:nth-child(2)>a{display: block;width: 7.5vw;height: 7.5vw;}
+    #pic>div:nth-child(2)>a img{width: 100%;height: 100%;}
+    main{display:-webkit-box;display:-ms-flexbox;display:flex ;-ms-flex-pack: distribute;justify-content: space-around;}
+    main>div{width: 49%;}
 }
 
 
