--- a/css/servce_1.css
+++ b/css/servce_1.css
@@ -1,10 +1,17 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @charset"UTF-8";
 #btn{opacity: 0;}
 #btn2{position: relative;left:80%;display:none;width: 35px;}
-#nav{display: flex;background-color: brown;}
+#nav{display: -webkit-box;display: -ms-flexbox;display: flex;background-color: brown;}
 #nav>div:nth-child(1){width:25%;position: relative;top:20px;}
-#nav>div:nth-child(2){width:75%;display: flex;justify-content: space-around;}
-
+#nav>div:nth-child(2){width:75%;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-pack: distribute;justify-content: space-around;}
+#nav>div:nth-child(2) section:hover>h2{background-color: rgb(255, 255, 255);color: brown;}
 
 
 #box1 h2 a+a{text-decoration: none;color: dimgrey;}
@@ -21,19 +28,23 @@
 
 
 
-footer{text-align: center;position: relative;top:0px;color: rgb(255, 255, 255);background-color: brown;}
+footer{text-align: center;position: relative;top:0px;}
 @media screen and (max-width:800px){
- 
+    #nav>div:nth-child(1){width:100%;position: relative;top:20px;}
+    #nav>div:nth-child(2) section:hover>h2{background-color: brown;color: rgb(0, 0, 0);}
     
 }
 
 @media screen and (max-width:600px){
     #btn2{position: relative;left:90%;display: block;}
-    #nav{flex-direction: column;}
+    #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
     #nav>div:nth-child(1){margin:0 auto;}
-    #nav>div:nth-child(2){display: flex;flex-direction: column;width: 100%;}
-    input[id=btn]:checked+nav{animation:nav 0.3s forwards;}
+    #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
+    input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
     #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
+    @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
+                     100%{left:0%;position: absolute;}
+                                    }
     @keyframes nav {0%{left:-100%;position: absolute;}
                      100%{left:0%;position: absolute;}
                                     }
@@ -43,11 +54,14 @@ footer{text-align: center;position: relative;top:0px;color: rgb(255, 255, 255);b
 @media screen and (min-width:601px)
               and (max-width:800px){
                 #btn2{position: relative;left:90%;display: block;}
-                #nav{flex-direction: column;}
+                #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
                 #nav>div:nth-child(1){margin:0 auto;}
-                #nav>div:nth-child(2){display: flex;flex-direction: column;width: 100%;}
-                input[id=btn]:checked+nav{animation:nav 0.3s forwards;}
+                #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
+                input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
                 #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
+                @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
+                                 100%{left:0%;position: absolute;}
+                                                }
                 @keyframes nav {0%{left:-100%;position: absolute;}
                                  100%{left:0%;position: absolute;}
                                                 }
