--- a/css/servce.css
+++ b/css/servce.css
@@ -36,8 +36,12 @@ footer{text-align: center;position: relative;top:0px;}
     #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
     #nav>div:nth-child(1){margin:0 auto;}
     #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
-    input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
-    #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
+    input[id=btn]+label>img:nth-child(1){opacity: 1;}
+    input[id=btn]+label>img:nth-child(2){opacity: 0;position:absolute;top:0;z-index: 10;left:-10%;}
+    input[id=btn]:checked+label+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
+    input[id=btn]:checked+label>img:nth-child(1){opacity: 0;}
+    input[id=btn]:checked+label>img:nth-child(2){opacity: 1;}
+    #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;top:0;}
     @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
                      100%{left:0%;position: absolute;}
                                     }
@@ -53,8 +57,12 @@ footer{text-align: center;position: relative;top:0px;}
                 #nav{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
                 #nav>div:nth-child(1){margin:0 auto;}
                 #nav>div:nth-child(2){display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;width: 100%;}
-                input[id=btn]:checked+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
-                #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;}
+                input[id=btn]+label>img:nth-child(1){opacity: 1;}
+                input[id=btn]+label>img:nth-child(2){opacity: 0;position:absolute;top:0;z-index: 10;left:-10%;}
+                input[id=btn]:checked+label+nav{-webkit-animation:nav 0.3s forwards;animation:nav 0.3s forwards;}
+                input[id=btn]:checked+label>img:nth-child(1){opacity: 0;}
+                input[id=btn]:checked+label>img:nth-child(2){opacity: 1;}
+                #nav{position:absolute;left:-100%;background-color: brown;width: 100%;text-align: center;z-index: 2;top:0;}
                 @-webkit-keyframes nav {0%{left:-100%;position: absolute;}
                                  100%{left:0%;position: absolute;}
                                                 }
